AKS/deployment/copy2.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: my-release
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-04-06T06:45:24Z"
  generation: 1
  labels:
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    helm.sh/chart: rabbitmq-cluster-operator-3.2.10
  name: my-release-rabbitmq-messaging-topology-operator
  namespace: default
  resourceVersion: "16684"
  uid: e3a41222-fccb-483c-9c3b-1cef571abcb4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: messaging-topology-operator
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: rabbitmq-cluster-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: messaging-topology-operator
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: rabbitmq-cluster-operator
        app.kubernetes.io/part-of: rabbitmq
        helm.sh/chart: rabbitmq-cluster-operator-3.2.10
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: messaging-topology-operator
                  app.kubernetes.io/instance: my-release
                  app.kubernetes.io/name: rabbitmq-cluster-operator
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - --metrics-bind-address=:8080
        command:
        - /manager
        image: docker.io/bitnami/rmq-messaging-topology-operator:1.10.2-scratch-r0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /metrics
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: rabbitmq-cluster-operator
        ports:
        - containerPort: 9443
          name: http-webhook
          protocol: TCP
        - containerPort: 8080
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /metrics
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
      serviceAccount: my-release-rabbitmq-messaging-topology-operator
      serviceAccountName: my-release-rabbitmq-messaging-topology-operator
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: my-release-rabbitmq-messaging-topology-operator-webhook
      nodeSelector:
        Type: rabbitmq
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-04-06T06:45:54Z"
    lastUpdateTime: "2023-04-06T06:45:54Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-04-06T06:45:24Z"
    lastUpdateTime: "2023-04-06T06:45:54Z"
    message: ReplicaSet "my-release-rabbitmq-messaging-topology-operator-676b56685c"
      has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
