AKS/deployment/appingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demoapp
  labels:
    app: demoapp
spec:
  containers:
    - image: amitgujar/static-app:latest
      name: static-site
      ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  selector:
    app: demoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demopods
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/ssl-cert: "my-tls-secret"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: mydeployment.me
    http: 
      paths:
      - path: /
        backend:
          service:
            name: demopods
            port:
              number: 80
        pathType: Exact
